# fast_scraping_rs

./: Cargo.toml  README.md  pyproject.toml
fast_scraping_rs/: __init__.py
src/: lib.rs
tests/: test_scraper.py
